Fixed duplicate login route issue and ensured password verification with bcrypt

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -48,8 +48,8 @@
           <button id="back" class="nav-btn">&#10094;</button> 
             <img src="/images/27.jpg" alt="The Art of Fielding" class="carousel-image" style="display: block;">
             <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
-            <img src="/images/24.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: none;">
-            <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: none;">
+            <img src="/images/24.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image " style="display: none;">
             <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
             <img src="/images/28.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
             <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
