--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
 <form id="loginForm" action="/api/users/login" method="POST">
   <h2 id="h2-login-form">Login</h2>
   <span>or</span>
-  <a href="http://localhost:3001/signup">Sign-UP</a>
+  <a href="http://localhost:3001/signup">Sign-Up</a>
   <div class="input-box">
     <label for="email">Email:</label>
     <input
