Fixed login route issue

--- a/views/contactForm.handlebars
+++ b/views/contactForm.handlebars
@@ -1,8 +1,8 @@
 <div class="homepage">
-  <a class="homepage" href="http://localhost:3001/">Homepage</a>
+  <a class="homepage" href="/">Homepage</a>
 <div class="homepage">
-  <a class="homepage" href="http://localhost:3001/signup">Sign Up</a>
-  <a class="homepage" href="http://localhost:3001/login">Login</a>
+  <a class="homepage" href="/signup">Sign Up</a>
+  <a class="homepage" href="/login">Login</a>
 </div>
 </div>
 <footer class="footer">
@@ -47,7 +47,7 @@
         required
       ></textarea>
 
-      <button href="http://localhost:3001/" type="submit">Submit</button>
+      <button href="/" type="submit">Submit</button>
     </form>
   </div>
 </footer>
