--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,5 +1,5 @@
 <div class="homepage">
-  <a class="homepage" href="http://localhost:3001/">Homepage</a>
+  <a class="homepage" href="/">Homepage</a>
 </div>
 <div class="favorites">
   <h1>Favorites</h1> 
