--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <div class="homepage">
-  <a class="homepage" href="http://localhost:3001/">Homepage</a>
-  <a class="homepage" href="http://localhost:3001/login">Login</a>
+  <a class="homepage" href="/">Homepage</a>
+  <a class="homepage" href="/login">Login</a>
 </div>
 <form id="signupForm" action="/api/users/signup" method="POST">
   <h2>Sign Up</h2>
