--- a/views/contactForm.handlebars
+++ b/views/contactForm.handlebars
@@ -1,9 +1,9 @@
 <div class="homepage">
   <a class="homepage" href="/">Homepage</a>
-<div class="homepage">
-  <a class="homepage" href="/signup">Sign Up</a>
-  <a class="homepage" href="/login">Login</a>
-</div>
+  <div class="homepage">
+    <a class="homepage" href="/signup">Sign-Up</a>
+    <a class="homepage" href="/login">Login</a>
+  </div>
 </div>
 <footer class="footer">
   <div class="contact-us">
