--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,7 +24,7 @@
         <button class="nav-btn" id="logout-btn">Sign out</button>
       {{else}}
         <a href="/login" class="nav-btn" id="login-btn">Login</a>
-        <a href="/signup" class="nav-btn" id="signup-btn">Sign-UP</a>
+        <a href="/signup" class="nav-btn" id="signup-btn">Sign-Up</a>
         <a href="/contactForm" class="nav-btn" id="contactForm-btn">Contact Us</a>
       {{/if}}
 
@@ -42,61 +42,64 @@
         />
         <button id="search-button">Search</button>
     </div>
-
+  
   <section id="carousel">
+  
     <div class="image-container">
+    
           <button id="back" class="nav-btn">&#10094;</button> 
-            <img src="/images/27.jpg" alt="The Art of Fielding" class="carousel-image" style="display: block;">
-            <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
-            <img src="/images/24.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image " style="display: none;">
-            <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/28.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
-            <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/25.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/26.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            
+            <img src="/images/27.jpg"                           alt="Book Cover Image" class="carousel-image" style="display: block;">
+            <img src="/images/a-little-life.jpg"                alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/24.jpg"                           alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/all-the-light-we-cannot-see.jpg"  alt="Book Cover Image" class="carousel-image " style="display: none;">
+            <img src="/images/my-brilliant-friend.jpg"          alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/28.jpg"                           alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/the-night-circus.jpg"             alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/the-fault-in-our-stars.jpg"       alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/the-overstory.jpg"                alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/life-after-life.jpg"              alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/the-underground-railroad.jpg"     alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/25.jpg"                           alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/there-there.jpg"                  alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/26.jpg"                           alt="Book Cover Image" class="carousel-image" style="display: none;">
+            <img src="/images/the-art-of-fielding.jpg"          alt="Book Cover Image" class="carousel-image" style="display: none;">
+            
           <button id="next" class="nav-btn">&#10095;</button> 
+    
       <div class="image-container1">
-            <img src="/images/22.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
-            <img src="/images/10.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/23.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/25.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/29.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/30.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/31.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/1.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/2.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/3.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/4.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/5.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/6.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/7.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/8.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/9.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-
-
+            <img src="/images/22.jpg" alt="Book Cover Image" class="carousel-image1" style="display: block;">
+            <img src="/images/10.jpg" alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/23.jpg" alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/25.jpg" alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/29.jpg" alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/31.jpg" alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/1.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/2.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/3.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/4.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/5.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/6.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/7.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/8.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+            <img src="/images/9.jpg"  alt="Book Cover Image" class="carousel-image1" style="display: none;">
+        
         <div class="image-container2">
-            <img src="/images/20.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
-            <img src="/images/21.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/32.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/33.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/34.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/35.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/11.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/12.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/13.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/14.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/15.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/16.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/17.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/18.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/19.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/20.jpg" alt="Book Cover Image" class="carousel-image2" style="display: block;">
+            <img src="/images/21.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/32.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/33.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/34.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/35.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/11.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/12.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/13.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/14.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/15.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/16.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/17.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/18.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
+            <img src="/images/19.jpg" alt="Book Cover Image" class="carousel-image2" style="display: none;">
 
 
         </div>
