--- a/public/css/contactForm.css
+++ b/public/css/contactForm.css
@@ -75,8 +75,18 @@ form#contactForm button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 25px;
+  border: 2px solid rgba(138, 201, 247, 0.7);
 }
 
 form#contactForm button:hover {
   background-color: #3a5370;
+  box-shadow: 0 0 20px 5px rgba(138, 201, 247, 0.7);
+}
+
+form#contactForm button:active {
+  box-shadow:0 0 20px 5px rgba(138, 201, 247, 0.7);
+}
+
+form#contactForm button:active{
+  box-shadow:0 0 20px 5px rgba(138, 201, 247, 0.7);
 }
