--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,7 +112,7 @@ body {
   left: 2px;
   top: 2px;
   height: calc(100% - 4px);
-  border: none;
+  border:2px solid rgba(138, 201, 247, 0.7);
   background-color: rgb(0, 78, 163);
   color: rgb(216, 212, 207);
   border-radius: 4px 0 0 4px;
@@ -127,7 +127,7 @@ body {
 #search-button:focus {
   outline: none;
   border-color: #1263b9;
-  box-shadow: 0 0 0 1px rgba(1, 186, 209, 0.75);
+  box-shadow: 0 0 20px 5px rgba(138, 201, 247, 0.7);
   transition: box-shadow 0.3s ease;/
 }
 
