--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 #navbar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 250px;
@@ -225,5 +225,3 @@ body {
 .card p::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-
-
