--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,9 @@
 <div class="homepage">
+    <!-- Link to the Homepage -->
   <a class="homepage" href="/">Homepage</a>
 </div>
 
+<!-- Login Form -->
 <form id="loginForm" action="/api/users/login" method="POST">
   <h2 id="h2-login-form">Login</h2>
   <span>or</span>
