--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,9 +1,14 @@
 <div class="homepage">
+    <!-- Link to the Homepage -->
   <a class="homepage" href="/">Homepage</a>
+    <!-- Link to the /login -->
   <a class="homepage" href="/login">Login</a>
 </div>
+
+<!-- Sign-up Form -->
+
 <form id="signupForm" action="/api/users/signup" method="POST">
-  <h2>Sign Up</h2>
+  <h2>Sign-Up</h2>
   <div class="input-box">
     <label for="username">User Name:</label>
     <input
