--- a/public/css/contactForm.css
+++ b/public/css/contactForm.css
@@ -1,27 +1,31 @@
 /* General styling for the footer and contact us section, adjusted to match your color scheme */
 .footer {
-  background-color: #212325;
+  background-color: #171a1d;
   color: rgb(232, 230, 227);
   padding: 20px;
   text-align: center;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  height: 90vh;
+  height: 80%;
 }
 
 .contact-us {
-  max-width: 500px;
-  width: 440px;
-  margin: auto;
-  padding: 20px;
+  display: flex;
   background-color: #292b2d;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  margin: 20px auto;
+  border-radius: 25px;
+  padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .bold-text {
   font-weight: bold;
   font-size: 55px;
+  margin-top: unset;
 }
 
 form#contactForm {
@@ -29,6 +33,7 @@ form#contactForm {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 85%;
 }
 
 #contactForm-btn {
