--- a/views/contactForm.handlebars
+++ b/views/contactForm.handlebars
@@ -1,9 +1,13 @@
+  <!-- Links that leads to the root URL -->
+
 <div class="homepage">
   <a class="homepage" href="/">Homepage</a>
   <div class="homepage">
-    <a class="homepage" href="/signup">Sign-Up</a>
+    <a class="homepage" id="sign-up" href="/signup">Sign-Up</a>
     <a class="homepage" href="/login">Login</a>
-  </div>
+</div>
+
+<!-- Contact form -->
 </div>
 <footer class="footer">
   <div class="contact-us">
