--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/carousel.css" />
     <link rel="stylesheet" href="/css/favorite.css" />
     <link rel="stylesheet" href="/css/contactForm.css" />
+    <link rel="stylesheet" href="/css/mobile.css" />
   </head>
   <body>
     <nav>
