--- a/public/css/contactForm.css
+++ b/public/css/contactForm.css
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
   width: 500px;
-  margin: 20px auto;
+  margin: 100px ;
   border-radius: 25px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
