change from user name to first name in signup form

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,7 +10,7 @@
 <form id="signupForm" action="/api/users/signup" method="POST">
   <h2>Sign-Up</h2>
   <div class="input-box">
-    <label for="username">User Name:</label>
+    <label for="username">First Name:</label>
     <input
       type="text"
       id="username"
