--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -15,7 +15,7 @@
       type="text"
       id="username"
       name="username"
-      placeholder="Enter your username"
+      placeholder="Enter your first name"
       required
     />
   </div>
