--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body {
   padding: 20px;
   z-index: 100;
   justify-content: space-between;
-  height: auto;
+  height: 100%;
 }
 
 .main-content {
