--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body {
   padding: 20px;
   z-index: 100;
   justify-content: space-between;
-  height: 100%;
+  height: auto;
 }
 
 .main-content {
@@ -100,7 +100,7 @@ body {
 
 #search-input {
   padding-left: 125px;
-  width: 700px;
+  width: auto;
   height: 55px;
   border-radius: 4px;
   border: rgb(82, 89, 93);
